[package]
name = "server_wtransport"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
mio = { version = "1.0", features = ["net", "os-poll"] }
quinn-proto = { git = "https://github.com/recatek/quinn", branch = "udp-timestamp" }
quinn-udp = { git = "https://github.com/recatek/quinn", branch = "udp-timestamp" }

web-transport-proto = "0.2"

bytes = "1.10"
rustls = "0.23"
rcgen = "0.13"
rustls-pemfile = "2.2.0"
quinn = "0.11.6"
thiserror = "2.0"
