[package]
name = "server_wtransport"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
mio = { version = "1.0", features = ["net", "os-poll"] }
quinn-proto = { git = "https://github.com/recatek/quinn", branch = "udp-timestamp" }
quinn-udp = { git = "https://github.com/recatek/quinn", branch = "udp-timestamp" }

bytes = "1.10"
rustls = "0.23"
rustls-pemfile = "2.2.0"

# Only needed for webtransport
web-transport-proto = "0.2"
url = "2.5"
thiserror = "2.0"
